로그인 완성 / 회원가입 강화

--- a/templates/tester.html
+++ b/templates/tester.html
@@ -17,5 +17,18 @@
 
       <button type="submit">Signup</button>
     </form>
+
+    <form class="signup" action="/login" method="post" autocomplete="off">
+
+      <div class="signup__field">
+        <input class="signup__input" type="text" name="id" id="id" placeholder="Username" required />
+      </div>
+
+      <div class="signup__field">
+        <input class="signup__input" type="password" name="password" id="password" placeholder="Password" required />
+      </div>
+
+      <button type="submit">Sign In</button>
+    </form>
 </body>
 </html>
